@@ -2,6 +2,8 @@
 - Added str_end* and str_case_end* functions, parallel to str_start* and
   str_case_start* but for suffixes.
 
+- Added the ability to use arbitrary format functions in fmt_multi.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
